Refactor NETPacket